tests/architecture/fixtures/invalid/seasonalweather/job_store/bad.py
from seasonalweather.worker.handlers import run_job


def violate_repository_boundary() -> None:
    run_job()
